# GeoClusterEngine

./: .replit  README.md  app.py  interactive_osm_picker.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-Build-a-complete-end-to-end-project-titled-Geospatial-Clustering-Business-Location-Recommendati-1764393654969_1764393654969.txt
data/: cleaned_data.csv  clusters.csv  location_scores.csv  raw_data.csv
maps/: competition_heatmap.html  heatmap.html  recommendations_map.html
modules/: __init__.py  business_suggestion.py  clean_data.py  clustering.py  fetch_data.py  recommendations.py  report_generator.py  scoring.py  simulation.py  visualize.py
