[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
